# smpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: Doxyfile.in  smppBuild.cmake  smppConfig.cmake.in  smppDependencies.cmake  smppSetTestEnvironment.cmake.in  smppUse.cmake.in
include/: mpp  smpp
src/: CMakeLists.txt
src/mpp/: CMakeLists.txt  MppAlgorithm2D.cpp  MppAlgorithm2D.h  MppAlgorithm2DSBCR.cpp  MppAlgorithm2DSBCR.h  MppColor.h  MppDataTerm2D.cpp  MppDataTerm2D.h  MppDataTerm2DBhattacharyya.cpp  MppDataTerm2DBhattacharyya.h  MppDataTerm2DGradient.cpp  MppDataTerm2DGradient.h  MppDataTerm2DGradientNorm.cpp  MppDictionary2D.cpp  MppDictionary2D.h  MppDictionary2DCircle.cpp  MppDictionary2DCircle.h  MppDraw2D.cpp  MppDraw2D.h  MppImage.cpp  MppImage.h  MppInteraction2D.cpp  MppInteraction2D.h  MppInteraction2DNoOverlap.cpp  MppInteraction2DNoOverlap.h  MppPoint.h  MppRand.cpp  MppRand.h  MppShape2D.cpp  MppShape2D.h  MppShapeCircle.cpp  MppShapeCircle.h  MppSilhouette2D.cpp  MppSilhouette2D.h  SImage.cpp  SImage.h  SImage2D.cpp  SImage2D.h
src/smpp/: CMakeLists.txt  MppAlgorithm2D.cpp  MppAlgorithm2D.h  MppAlgorithm2DSBCR.cpp  MppAlgorithm2DSBCR.h  MppColor.cpp  MppColor.h  MppDataTerm2D.cpp  MppDataTerm2D.h  MppDataTerm2DBhattacharyya.cpp  MppDataTerm2DBhattacharyya.h  MppDataTerm2DGradient.cpp  MppDataTerm2DGradient.h  MppDataTerm2DGradientNorm.cpp  MppDataTerm2DGradientNorm.h  MppDictionary2D.cpp  MppDictionary2D.h  MppDictionary2DCircle.cpp  MppDraw2D.cpp  MppDraw2D.h  MppImage.cpp  MppInteraction2DNoOverlap.h  MppPoint.cpp  MppPoint.h  MppShape2D.cpp  MppShape2D.h  MppShapeCircle.cpp
tests/: CMakeLists.txt
tests/mpp/: CMakeLists.txt  TestMppAlgoGrad.cpp  TestMppInteraction2DNoOverlap.cpp  TestMppShapeCircle.cpp  TestMppSilhouette.cpp  smppTestConfig.h.in
tests/mpp/imagesTest/: cell.tif  cell_bm.tif  res.tif
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  main.cpp  mpp.cpp
