############################################################
#
# $Id$
#
# Copyright (c) SMpp 2010
#
# AUTHOR:
# Sylvain Prigent
# 

## #################################################################
## Options
## #################################################################

## #################################################################
## Add subdirectory
## #################################################################
add_subdirectory( mpp )