############################################################
#
# $Id$
#
# Copyright (c) Mpp 2020
#
# AUTHOR:
# Sylvain Prigent
# 

## #################################################################
## Add subdirectory
## #################################################################
add_subdirectory( cli )
